--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,46 @@
-version: "3.9"
+version: '3.9'
 
 services:
   app:
     build: 
       context: .
-      args:
-        - DEV=true
-    ports:
-      - "8000:8000"
+    restart: always
     volumes:
-      - ./app:/app
-    command: >
-      sh -c "python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
+      - static-data:/vol/web/static
     environment:
       - DB_HOST=db
-      - DB_NAME=devdb
-      - DB_USER=devuser
-      - DB_PASS=changeme
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - SECRET_KEY=${DJANGO_SECRET_KEY}
+      - ALLOWED_HOSTS=127.0.0.1,localhost
     depends_on:
       - db
   
+  
   db:
     image: postgres:15-alpine
+    restart: always
     volumes:
-      - dev-db-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=devdb
-      - POSTGRES_USER=devuser
-      - POSTGRES_PASSWORD=changeme
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASS}
+  
+
+  proxy:
+    build: 
+      context: ./proxy
+    restart: always
+    depends_on:
+      - app
+    ports:
+      - 8000:8000
+    volumes:
+      - static-data:/vol/static
+
 
 volumes:
-  dev-db-data:
+  postgres-data:
+  static-data:
